--- a/index.html
+++ b/index.html
@@ -34,7 +34,22 @@
     <p>We put everything we have into our work.</p>
 
 <!-- footer -->
-    
+
+    <h3 class="backgroundimg">Designed in New York</h3>
+
+    <h3>Portfolio</h3>
+    <p>Coming Soon</p>
+
+    <h3>Team</h3>
+    <p>We're Hiring!</p>
+
+    <h3>Contact</h3>
+    <p>Phone: (555)-555-5555 <br>E-mail: test@example.com <br>Twitter: @test</p>
+
+<!-- sub-footer -->
+    <div id="subfooter">
+      <p>© Broadway 2018 <a href="#">Home</a> <a href="#">About</a> <a href="#">Work</a> <a href="#">Team</a> <a href="#">Contact</a></p>
+    </div>
 
   </body>
 </html>
