--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
 <!-- heading -->
 
-    <div class="backgroundimg">
+    <div class="bkg">
       <h1>Broadway Design</h1>
-      <p><a href="#">Home</a></p>
-      <p><a href="#">Process</a></p>
-      <p><a href="#">Work</a></p>
-      <p><a href="#">Team</a></p>
-      <p><a href="#">Contact</a></p>
+      <p><a href="#" class="bkg">Home</a></p>
+      <p><a href="#" class="bkg">Process</a></p>
+      <p><a href="#" class="bkg">Work</a></p>
+      <p><a href="#" class="bkg">Team</a></p>
+      <p><a href="#" class="bkg">Contact</a></p>
     </div>
 
 <!-- process -->
@@ -35,7 +35,7 @@
 
 <!-- footer -->
 
-    <h3 class="backgroundimg">Designed in New York</h3>
+    <h3 class="bkg">Designed in New York</h3>
 
     <h3>Portfolio</h3>
     <p>Coming Soon</p>
