--- a/index.html
+++ b/index.html
@@ -23,33 +23,34 @@
     <h2>Our Process</h2>
     <img src="./resources/images/identify.svg" alt="swoop symbol">
     <h3>Identify</h3>
-    <p>We focus on the most important details.</p>
+    <p class="prodescrip">We focus on the most important details.</p>
 
     <img src="./resources/images/understand.svg" alt="circle symbol">
     <h3>Understand</h3>
-    <p>We study our projects inside and out.</p>
+    <p class="prodescrip">We study our projects inside and out.</p>
 
     <img src="./resources/images/execute.svg" alt="arrow pointing left symbol">
     <h3>Execute</h3>
-    <p>We put everything we have into our work.</p>
+    <p class="prodescrip">We put everything we have into our work.</p>
 
 <!-- footer -->
 
-    <h3 class="bkg">Designed in New York</h3>
+    <h2 class="bkg">Designed in New York</h2>
 
     <h3>Portfolio</h3>
-    <p>Coming Soon</p>
+    <p class="prodescrip">Coming Soon</p>
 
     <h3>Team</h3>
-    <p>We're Hiring!</p>
+    <p class="prodescrip">We're Hiring!</p>
 
     <h3>Contact</h3>
-    <p>Phone: (555)-555-5555 <br>E-mail: test@example.com <br>Twitter: @test</p>
+    <p class="prodescrip">Phone: (555)-555-5555</p>
+    <p class="prodescrip">E-mail: test@example.com</p>
+    <p class="prodescrip">Twitter: @test</p>
 
 <!-- sub-footer -->
-    <div id="subfooter">
-      <p>© Broadway 2018 <a href="#">Home</a> <a href="#">About</a> <a href="#">Work</a> <a href="#">Team</a> <a href="#">Contact</a></p>
-    </div>
+
+  <p id="color"><span id="copyright">© Broadway 2018</span> <a href="#" class="white">Home</a> <a href="#" class="white">About</a> <a href="#" class="white">Work</a> <a href="#" class="white">Team</a> <a href="#" class="white">Contact</a></p>
 
   </body>
 </html>
